--- a/Wunschliste.html
+++ b/Wunschliste.html
@@ -11,9 +11,9 @@
 
 <div class=linkpunkte>
 <p> <strong> Für die Stimmung <img src="https://i3.glitter-graphics.org/pub/529/529573nt2ah061dt.gif" alt="...">:</strong> </p>
-<audio autoplay controls>
-  <source src="wunschliste.ogg" type="audio/ogg">
-  <source src="wunschliste.mp3" type="audio/mpeg">
+<audio controls loop>
+  <source src="wunschliste (2).mp3" type="audio/ogg">
+  <source src="wunschliste (2).mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 </div>
