--- a/Wunschliste.html
+++ b/Wunschliste.html
@@ -11,7 +11,7 @@
 
 <div class=linkpunkte>
 <p> <strong> Für die Stimmung <img src="https://i3.glitter-graphics.org/pub/529/529573nt2ah061dt.gif" alt="...">:</strong> </p>
-<audio controls autoplay muted>
+<audio controls loop>
   <source src="wunschliste (2).mp3" type="audio/ogg">
   <source src="wunschliste (2).mp3" type="audio/mpeg">
   Your browser does not support the audio element.
